--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,10 @@ img {
   align-items: center;
   justify-content: center;
 }
+.iframeDiv{
+  display: flex;
+ justify-content: center;
+width: 100%;
+  margin:2rem;
+}
+
